--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "msm-ia-api",
   "version": "1.0.0",
-  "type": "module",
+  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
@@ -9,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
-    "openai": "^4.28.0"
+    "openai": "^4.0.0"
   }
 }
+
