--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "msm-ia-api",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
-    "openai": "^4.60.0"
+    "express": "^4.18.2",
+    "multer": "^1.4.5",
+    "openai": "^4.0.0"
   }
 }
+
