--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "22.x"
+  },
   "dependencies": {
+    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "multer": "^1.4.5",
-    "openai": "^4.0.0"
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.30.0"
   }
 }
+
+
 
