--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "msm-ia-api",
   "version": "1.0.0",
   "type": "module",
+  "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo \"no build needed\""
   },
   "engines": {
     "node": "22.x"
   },
   "dependencies": {
-    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "openai": "^4.30.0"
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.2",
+    "openai": "^4.0.0"
   }
 }
+
+
 
 
 
