--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
+  "name": "msm-ia-api",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2",
     "form-data": "^4.0.0",
-    "cors": "^2.8.5"
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2"
   }
 }
+
 
 
 
