--- a/ai-python/requirements.txt
+++ b/ai-python/requirements.txt
@@ -1,7 +1,5 @@
 fastapi==0.115.6
-uvicorn[standard]==0.32.1
-python-multipart==0.0.20
-pillow==11.0.0
-openai==1.57.0
-
-
+uvicorn==0.32.1
+python-multipart==0.0.12
+pillow==10.4.0
+openai==1.59.6
