--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "msm-ia-api",
   "version": "1.0.0",
   "private": true,
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
