--- a/ai-python/requirements.txt
+++ b/ai-python/requirements.txt
@@ -1,5 +1,7 @@
-fastapi==0.115.6
-uvicorn==0.32.1
-python-multipart==0.0.12
-pillow==10.4.0
-openai==1.59.6
+fastapi
+uvicorn
+python-multipart
+pillow
+openai>=1.0.0
+
+
