--- a/ai-python/requirements.txt
+++ b/ai-python/requirements.txt
@@ -1,7 +1,7 @@
-fastapi
-uvicorn
-python-multipart
-pillow
-openai>=1.0.0
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+python-multipart==0.0.9
+openai>=1.40.0
+
 
 
