--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "msm-ia-api",
-  "private": true,
   "type": "module",
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
