--- a/ai-python/requirements.txt
+++ b/ai-python/requirements.txt
@@ -1,7 +1,8 @@
-fastapi==0.115.0
-uvicorn==0.30.6
-python-multipart==0.0.9
-openai==1.40.0
+fastapi==0.115.6
+uvicorn[standard]==0.32.1
+python-multipart==0.0.12
+openai>=1.40.0
+
 
 
 
